# report_expences_api

./: .dockerignore  .env.example  .gitignore  Agent.md  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
alembic/: README  env.py
alembic/versions/: d879f84e4c40_initial_schema.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  container.py  database.py  error_capture.py  exceptions.py  logging_config.py  problem_details.py
app/modules/: __init__.py
app/modules/expenses/: __init__.py
app/modules/expenses/api/: __init__.py  dependencies.py  routes.py  schemas.py
app/modules/expenses/application/services/: __init__.py  deduplication_service.py  expense_validation_service.py  import_normalization_service.py  llm_orchestration_service.py
app/modules/expenses/application/use_cases/: __init__.py  import_expenses_batch.py  list_expenses.py  process_chat_expense.py
app/modules/expenses/domain/: __init__.py  entities.py  llm_provider.py  normalization.py  repositories.py
app/modules/expenses/infrastructure/: __init__.py
app/modules/expenses/infrastructure/backup/: __init__.py  google_sheets_backup_placeholder.py
app/modules/expenses/infrastructure/llm/: openai_llm_provider.py
app/modules/expenses/infrastructure/persistence/: in_memory_store.py
app/modules/expenses/infrastructure/persistence/postgres/: base.py  mappers.py  orm_models.py  postgres_repositories.py
app/modules/expenses/infrastructure/postgres/: __init__.py  repository_placeholder.py
